force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Contract Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>