force-app/main/default/objects/Contract__c/fields/CancellationPeriodMonths__c.field-meta.xml
<CustomField>
    <fullName>CancellationPeriodMonths__c</fullName>
    <label>Cancellation Period (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>