force-app/main/default/objects/Contract__c/fields/ContactPersonCustomer__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Contact Person Customer)</relationshipLabel>
    <relationshipName>Contract_Admin3</relationshipName>
    <type>Lookup</type>
</CustomField>