force-app/main/default/objects/Contract__c/fields/ContractEndsWithService__c.field-meta.xml
<CustomField>
    <fullName>ContractEndsWithService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract ends with Service</label>
    <type>Checkbox</type>
</CustomField>