force-app/main/default/objects/Contract__c/fields/ContractExpirationNoticeDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExpirationNoticeDate__c</fullName>
    <formula>ContractEndDate__c -  (30+(CancellationPeriodMonths__c * 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expiration Notice Date</label>
    <type>Date</type>
</CustomField>