force-app/main/default/objects/Contract__c/fields/ContractOwnerExternal__c.field-meta.xml
<CustomField>
    <fullName>ContractOwnerExternal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner (External)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.ContractPartnerExternal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>