force-app/main/default/objects/Contract__c/fields/ContractOwnerInternal__c.field-meta.xml
<CustomField>
    <fullName>ContractOwnerInternal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner (Internal)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.ContractPartnerInternal__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contract2</relationshipName>
    <type>Lookup</type>
</CustomField>