force-app/main/default/objects/Contract__c/fields/ContractPartnerExternal__c.field-meta.xml
<CustomField>
    <fullName>ContractPartnerExternal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Partner (External)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Summary Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>