force-app/main/default/objects/Contract__c/fields/ContractPartnerInternal__c.field-meta.xml
<CustomField>
    <fullName>ContractPartnerInternal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Partner (Internal)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Billing Contact)</relationshipLabel>
    <relationshipName>Contract_Admin3</relationshipName>
    <type>Lookup</type>
</CustomField>