force-app/main/default/objects/Contract__c/fields/ContractPartnerSignedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractPartnerSignedDate__c</fullName>
    <label>Contract Partner Signed Date</label>
    <type>Date</type>
</CustomField>