force-app/main/default/objects/Contract__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <label>Contract Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>