force-app/main/default/objects/Contract__c/fields/ContractTermMonths__c.field-meta.xml
<CustomField>
    <fullName>ContractTermMonths__c</fullName>
    <label>Contract Term (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>