force-app/main/default/objects/Contract__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non Disclosure Agreement</fullName>
            </value>
            <value>
                <fullName>Frame Contract</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
            <value>
                <fullName>Works Contract</fullName>
            </value>
            <value>
                <fullName>License Contract</fullName>
            </value>
            <value>
                <fullName>Insurance Contract</fullName>
            </value>
            <value>
                <fullName>Banking Contract</fullName>
            </value>
            <value>
                <fullName>Rental Contract</fullName>
            </value>
            <value>
                <fullName>Media Subscription</fullName>
            </value>
            <value>
                <fullName>NATEL business infinity S</fullName>
            </value>
            <value>
                <fullName>NATEL business infinity M</fullName>
            </value>
            <value>
                <fullName>NATEL business infinity L</fullName>
            </value>
            <value>
                <fullName>NATEL business infinity XL</fullName>
            </value>
            <value>
                <fullName>NATEL business data M</fullName>
            </value>
            <value>
                <fullName>NATEL Business data XL</fullName>
            </value>
            <value>
                <fullName>NATEL data M</fullName>
            </value>
            <value>
                <fullName>NATEL company</fullName>
            </value>
            <value>
                <fullName>NATEL Office light</fullName>
            </value>
            <value>
                <fullName>NATEL company basic</fullName>
            </value>
            <value>
                <fullName>BLC - Internal</fullName>
            </value>
            <value>
                <fullName>Customer - direct reimbursement</fullName>
            </value>
            <value>
                <fullName>Customer - SLA reimbursement</fullName>
            </value>
            <value>
                <fullName>External - no reimbursemeent</fullName>
            </value>
            <value>
                <fullName>inOne KMU mobile XL</fullName>
            </value>
            <value>
                <fullName>inOne KMU mobile L</fullName>
            </value>
            <value>
                <fullName>inOne KMU mobile M</fullName>
            </value>
            <value>
                <fullName>inOne KMU mobile S</fullName>
            </value>
            <value>
                <fullName>inOne KMU mobile XS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>