force-app/main/default/objects/Contract__c/fields/ContractVolume__c.field-meta.xml
<CustomField>
    <fullName>ContractVolume__c</fullName>
    <label>Contract Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>