force-app/main/default/objects/Contract__c/fields/Costs__c.field-meta.xml
<CustomField>
    <fullName>Costs__c</fullName>
    <label>Costs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>