force-app/main/default/objects/Contract__c/fields/DateNextContractAction7__c.field-meta.xml
<CustomField>
    <fullName>DateNextContractAction7__c</fullName>
    <formula>DateNextContractAction__c +7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Next Contract Action +7</label>
    <type>Date</type>
</CustomField>