force-app/main/default/objects/Contract__c/fields/DateNextContractAction__c.field-meta.xml
<CustomField>
    <fullName>DateNextContractAction__c</fullName>
    <label>Date Next Contract Action</label>
    <type>Date</type>
</CustomField>