force-app/main/default/objects/Contract__c/fields/DomainName__c.field-meta.xml
<CustomField>
    <fullName>DomainName__c</fullName>
    <label>Domain Name</label>
    <type>Url</type>
</CustomField>