force-app/main/default/objects/Contract__c/fields/DomainOwner__c.field-meta.xml
<CustomField>
    <fullName>DomainOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domain Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Domain Owner)</relationshipLabel>
    <relationshipName>Contract_Admin2</relationshipName>
    <type>Lookup</type>
</CustomField>