force-app/main/default/objects/Contract__c/fields/Edit__c.field-meta.xml
<CustomField>
    <fullName>Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit</label>
    <type>Checkbox</type>
</CustomField>