force-app/main/default/objects/Contract__c/fields/InitialFee__c.field-meta.xml
<CustomField>
    <fullName>InitialFee__c</fullName>
    <label>Initial Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>