force-app/main/default/objects/Contract__c/fields/InvoiceCycle__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCycle__c</fullName>
    <label>Invoice Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>