force-app/main/default/objects/Contract__c/fields/InvoiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStartDate__c</fullName>
    <label>Invoice Start Date</label>
    <type>Date</type>
</CustomField>