force-app/main/default/objects/Contract__c/fields/Licensee__c.field-meta.xml
<CustomField>
    <fullName>Licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contract_Admin4</relationshipName>
    <type>Lookup</type>
</CustomField>