force-app/main/default/objects/Contract__c/fields/Licensor__c.field-meta.xml
<CustomField>
    <fullName>Licensor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contract_Admin5</relationshipName>
    <type>Lookup</type>
</CustomField>