force-app/main/default/objects/Contract__c/fields/NextCancellationDate__c.field-meta.xml
<CustomField>
    <fullName>NextCancellationDate__c</fullName>
    <label>Next Cancellation Date</label>
    <type>Date</type>
</CustomField>