force-app/main/default/objects/Contract__c/fields/NumberOfInvoices__c.field-meta.xml
<CustomField>
    <fullName>NumberOfInvoices__c</fullName>
    <formula>IF( InitialFee__c &gt; 0, 
(ContractTermMonths__c ) / 
(CASE(InvoiceCycle__c, &quot;Monthly&quot;, 1,
(CASE(InvoiceCycle__c, &quot;Quarterly&quot;, 3,
(CASE(InvoiceCycle__c, &quot;Yearly&quot;, 12,
0
)))))) +1, (ContractTermMonths__c ) / 
(CASE(InvoiceCycle__c, &quot;Monthly&quot;, 1,
(CASE(InvoiceCycle__c, &quot;Quarterly&quot;, 3,
(CASE(InvoiceCycle__c, &quot;Yearly&quot;, 12,
0
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>