force-app/main/default/objects/Contract__c/fields/OngoingAnnualFee__c.field-meta.xml
<CustomField>
    <fullName>OngoingAnnualFee__c</fullName>
    <label>Ongoing Annual Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>