force-app/main/default/objects/Contract__c/fields/OriginOfContract__c.field-meta.xml
<CustomField>
    <fullName>OriginOfContract__c</fullName>
    <label>Origin of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New through Employee</fullName>
            </value>
            <value>
                <fullName>BLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>