force-app/main/default/objects/Contract__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Cost</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Cost Ceiling</fullName>
            </value>
            <value>
                <fullName>Frame Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>