force-app/main/default/objects/Contract__c/fields/Registrar__c.field-meta.xml
<CustomField>
    <fullName>Registrar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrar</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contract_Admin</relationshipName>
    <type>Lookup</type>
</CustomField>