force-app/main/default/objects/Contract__c/fields/RemarksContractAction__c.field-meta.xml
<CustomField>
    <fullName>RemarksContractAction__c</fullName>
    <label>Remarks Contract Action</label>
    <type>TextArea</type>
</CustomField>