force-app/main/default/objects/Contract__c/fields/RestrictAccessToOwner__c.field-meta.xml
<CustomField>
    <fullName>RestrictAccessToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want to restrict access to this Contract to the internal Contract Owner.</inlineHelpText>
    <label>Restrict Access to Owner</label>
    <type>Checkbox</type>
</CustomField>