force-app/main/default/objects/Contract__c/fields/RestrictAccessToUnit__c.field-meta.xml
<CustomField>
    <fullName>RestrictAccessToUnit__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box if you want to restrict access to this Contract to the Unit of the internal Contract Owner.</inlineHelpText>
    <label>Restrict Access to Unit</label>
    <type>Checkbox</type>
</CustomField>