force-app/main/default/objects/Contract__c/fields/RGProfil__c.field-meta.xml
<CustomField>
    <fullName>RGProfil__c</fullName>
    <label>RG-Profil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5.13098 (BLC Allgemein)</fullName>
            </value>
            <value>
                <fullName>5.13098.11 (gateB)</fullName>
            </value>
            <value>
                <fullName>5.13098.13 (Calydo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>