force-app/main/default/objects/Contract__c/fields/SalesCommission__c.field-meta.xml
<CustomField>
    <fullName>SalesCommission__c</fullName>
    <label>Sales Commission</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>