force-app/main/default/objects/Contract__c/fields/SignedContractExists__c.field-meta.xml
<CustomField>
    <fullName>SignedContractExists__c</fullName>
    <label>Signed Contract Exists</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>