force-app/main/default/objects/Contract__c/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <label>Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BrandMaker</fullName>
            </value>
            <value>
                <fullName>Censhare</fullName>
            </value>
            <value>
                <fullName>officeatwork</fullName>
            </value>
            <value>
                <fullName>Simplex</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>