force-app/main/default/objects/Contract__c/fields/SpecialTerms__c.field-meta.xml
<CustomField>
    <fullName>SpecialTerms__c</fullName>
    <label>Special Terms</label>
    <type>TextArea</type>
</CustomField>