force-app/main/default/objects/Contract__c/fields/ThirdPartyInvolved__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyInvolved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Involved</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>