force-app/main/default/objects/Contract__c/fields/TotalContractVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalContractVolume__c</fullName>
    <label>Total Contract Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>