force-app/main/default/objects/Contract__c/fields/UnlimitedPeriod__c.field-meta.xml
<CustomField>
    <fullName>UnlimitedPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlimited Period</label>
    <type>Checkbox</type>
</CustomField>