force-app/main/default/objects/Contract__c/fields/UserRecordType__c.field-meta.xml
<CustomField>
    <fullName>UserRecordType__c</fullName>
    <formula>User__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Record Type</label>
    <type>Text</type>
</CustomField>