force-app/main/default/objects/Contract__c/fields/ZAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>ZAccountOwner__c</fullName>
    <formula>ContractPartnerExternal__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZAccountOwner</label>
    <type>Text</type>
</CustomField>