force-app/main/default/objects/Contract__c/recordTypes/LicenseContract.recordType-meta.xml
<RecordType>
    <fullName>LicenseContract</fullName>
    <active>true</active>
    <label>License Contract</label>
</RecordType>