force-app/main/default/objects/Contract__c/recordTypes/TelecommunicationContract.recordType-meta.xml
<RecordType>
    <fullName>TelecommunicationContract</fullName>
    <active>true</active>
    <label>Telecommunication Contract</label>
</RecordType>