force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContractName__c</columns>
    <columns>ContractPartnerExternal__c</columns>
    <columns>ThirdPartyInvolved__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>A_Companys</role>
        <role>BLC</role>
        <role>B_Group_Services</role>
        <role>CY</role>
        <role>CY_Direct_Reports</role>
        <role>CY_Team_Digital_Motion</role>
        <role>FIN</role>
        <role>Finance_Team</role>
        <role>FokusNext</role>
        <role>GBCH</role>
        <role>GBCH_Consulting</role>
        <role>GBCH_Key_Account_Manageme_Key_Account_Management</role>
        <role>GBCH_Solution_Architekt_Development</role>
        <role>GBCH_TL_Customer_Engagement_Data_Science</role>
        <role>GBCH_TL_Support</role>
        <role>GBCH_TL_Team_Content</role>
        <role>GBCH_Team_Business_Consulting_and_Project_Management</role>
        <role>GBCH_Team_Content</role>
        <role>GBCH_Team_Customer_Engagement_Data_Science</role>
        <role>GBCH_Team_Key_Account_Management_and_Businness_Development</role>
        <role>GBCH_Team_Solution_Architekt_Development</role>
        <role>GBCH_Team_Support</role>
        <role>GBUS_MD_Direct_Reports</role>
        <role>GBUS_gateB_US</role>
        <role>GRLAB</role>
        <role>HBC</role>
        <role>HBC_Direct_Reports</role>
        <role>HR</role>
        <role>HR_Team</role>
        <role>HYS</role>
        <role>HYS_Hieronymus</role>
        <role>HYS_TL_Dora_Zieglmeier</role>
        <role>HYS_TL_Herbert_Seybold</role>
        <role>HYS_TL_Marion_Albisser</role>
        <role>HYS_TL_Thorsten_Traber</role>
        <role>HYS_Team_Dora_Zieglmeier</role>
        <role>HYS_Team_Marion_Albisser</role>
        <role>HYS_Team_Rahel_Steppacher</role>
        <role>IT</role>
        <role>IT_Team</role>
        <role>SVH</role>
        <role>SVH_MD_Direct_Reports</role>
        <role>Shared_Service</role>
        <role>XB_Extrablack</role>
    </sharedTo>
</ListView>