force-app/main/default/objects/Contract__c/listViews/Alle_meine_Vertr_ge.listView-meta.xml
<ListView>
    <fullName>Alle_meine_Vertr_ge</fullName>
    <columns>ContractOwnerInternal__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>ContractPartnerInternal__c</columns>
    <columns>ContractPartnerExternal__c</columns>
    <columns>NAME</columns>
    <columns>ContractName__c</columns>
    <columns>ContractType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DateNextContractAction__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,Active</value>
    </filters>
    <label>Alle meine Verträge</label>
</ListView>