force-app/main/default/objects/Contract__c/listViews/IT_Contracts.listView-meta.xml
<ListView>
    <fullName>IT_Contracts</fullName>
    <columns>NAME</columns>
    <columns>ContractName__c</columns>
    <columns>ContractOwnerInternal__c</columns>
    <columns>ContractPartnerInternal__c</columns>
    <columns>ContractOwnerExternal__c</columns>
    <columns>Costs__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>IT Contracts</label>
    <sharedTo>
        <group>Skywalk_IT_Alle</group>
    </sharedTo>
</ListView>